--- a/app/styles/_globals.scss
+++ b/app/styles/_globals.scss
@@ -1,7 +1,8 @@
-@include normalize();
+@import 'lib/normalize';
+@import 'lib/scut';
+
+@include normalize;
 
 @include scut-reset-antialias;
 @include scut-reset-border-box;
 @include scut-reset-pointer;
-@include scut-reset-media;
-@include scut-reset-paragraph;
