--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -7,19 +7,7 @@ $base-unit: 'em';
 $base-font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
 $normalize-vertical-rhythm: true;
 
-// susy
-$susy: (
-  container: scut-em(1336px, $base-font-size),
-  container-position: center,
-  columns: 12,
-  gutters: 1 / 4,
-  global-box-sizing: border-box,
-  debug: (
-    image: show,
-    color: #dad,
-    output: overlay
-  )
-);
+$container-width: scut-em(1336px, $base-font-size);
 
 // color palette
 $primary: #005991;
