feat(style): change color and border styles

--- a/app/styles/_mixins.scss
+++ b/app/styles/_mixins.scss
@@ -2,47 +2,47 @@
 
 @mixin corner-highlight-border($width, $height) {
   // Custom border style
-  $dark: darken($primary-dark, 30);
+  $shadow-color: rgba($dark, 0.5);
 
-  border: 1px $primary solid;
-  box-shadow: inset 1px 1px $dark, inset -1px -1px $dark;
+  border: 1px rgba($primary-light, 0.5) solid;
+  box-shadow: inset 1px 1px $shadow-color, inset -1px -1px $shadow-color;
 
   // Build four little transparent boxes on the corners
   &,
   > :first-child {
     &::before,
     &::after {
-      border: solid $primary-light;
-      content: ' ';
-      height: $height;
       position: absolute;
       width: $width;
+      height: $height;
+      border: solid $primary-light-gray;
+      content: ' ';
     }
   }
 
   &::before {
-    border-width: 2px 0 0 2px;
-    left: -1px;
     top: -1px;
+    left: -1px;
+    border-width: 2px 0 0 2px;
   }
 
   &::after {
-    border-width: 2px 2px 0 0;
-    right: -1px;
     top: -1px;
+    right: -1px;
+    border-width: 2px 2px 0 0;
   }
 
   > :first-child {
     &::before {
-      border-width: 0 2px 2px 0;
-      bottom: -1px;
       right: -1px;
+      bottom: -1px;
+      border-width: 0 2px 2px 0;
     }
 
     &::after {
-      border-width: 0 0 2px 2px;
       bottom: -1px;
       left: -1px;
+      border-width: 0 0 2px 2px;
     }
   }
 }
