refactor(style): add new variables

--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -34,3 +34,10 @@ $widget-header-height: 10px;
 
 $block-map-height: 700px;
 $block-customer-height: 188px;
+$block-installation-height: 222px;
+$block-installation-padding-top: 27px;
+$block-service-height: 398px;
+$block-service-padding-top: 30px;
+$block-sales-height: 268px;
+$block-sales-padding-top: 30px;
+
