--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -9,30 +9,31 @@ $normalize-vertical-rhythm: true;
 
 $container-width: scut-em(1336px, $base-font-size);
 
-// color palette
 $primary: #263372;
-$primary-light: #4c85c2;
-$primary-lighter: #0caefd;
-$primary-light-gray: #5e9abe;
-$primary-lightest: #38f7fe;
-$primary-dark: #003063;
-$primary-darker: #092442;
 $dark: #080309;
 $light: #fff;
-$emphasis: #f6c40a;
-
 $body-background: linear-gradient($primary, $dark);
 $header-background: $primary;
-$widget-background: rgba(#121044, 0.6);
-
 $header-color: #fff;
 
-// layout
+// dashboard color palette
+$dashboard-primary: $primary;
+$dashboard-primary-light: #4c85c2;
+$dashboard-primary-lighter: #0caefd;
+$dashboard-primary-light-gray: #5e9abe;
+$dashboard-primary-lightest: #38f7fe;
+$dashboard-primary-dark: #003063;
+$dashboard-primary-darker: #092442;
+$dashboard-widget-background: rgba(#121044, 0.6);
+$dashboard-emphasis: #f6c40a;
+
+// site layout
 $site-header-height: 2 * $base-line-height;
 
 $widget-header-margin-top: 10px;
 $widget-header-height: $widget-header-margin-top + $base-line-height;
 
+// dashboard layout
 $block-map-height: 700px;
 $block-customer-height: 188px;
 $block-installation-height: 222px;
