--- a/app/templates/_layout.njk
+++ b/app/templates/_layout.njk
@@ -2,25 +2,26 @@
 <html lang="zh_CN" dir="ltr">
 <head>
   <meta charset="utf-8"/>
-  <title>Tahoe BI</title>
-  <meta http-equiv="cleartype" content="on">
+  {% block title %}
+    <title>Tahoe BI</title>
+  {% endblock %}
   <meta http-equiv="X-UA-Compatible" content="IE=edge;chrome=1"/>
-  <meta name="HandheldFriendly" content="True">
-  <meta name="MobileOptimized" content="320">
   <meta name="viewport" content="initial-scale=1">
   <link rel="stylesheet" href="css/tahoe-bi.css" media="screen" charset="utf-8">
   <link rel="stylesheet" href="css/sprite.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="{{ bodyClass }}">
 <div class="app">
   <header class="header-bar">
     <div class="site-header">
       <div class="menu-toggle">
-      <i class="icon-menu"></i>
+        <i class="icon-menu"></i>
       </div>
       <div class="header-title">
         <i class="title-icon icon-folder"></i>
-        <div>业务概况</div>
+        {% block breadcumb %}
+          <div>业务概况</div>
+        {% endblock %}
       </div>
       <div class="header-panel">
         <a>登陆</a>
@@ -29,11 +30,18 @@
     </div>
   </header>
   <div class="content">
+    {% block content %}
+    {% endblock %}
   </div>
 </div>
 <script src="js/vendor.js"></script>
 <script src="js/tahoe-bi.js"></script>
-<script>
-</script>
+{% block script %}
+  <script>
+      domready(function () {
+          // pass
+      })
+  </script>
+{% endblock %}
 </body>
 </html>
