fix(template): add global comments that make eslint happy

--- a/app/templates/dashboard.njk
+++ b/app/templates/dashboard.njk
@@ -112,6 +112,7 @@
 
 {% block script %}
   <script>
+      /* global TahoeBI */
       domready(function () {
           const dashboard = new TahoeBI.DashboardView(document.querySelector('.app'));
           dashboard.updateMapView([
