--- a/app/templates/device-list.njk
+++ b/app/templates/device-list.njk
@@ -31,6 +31,7 @@
 
 {% block script %}
   <script>
+      /* global TahoeBI */
       domready(function () {
           const deviceListView = new TahoeBI.DeviceListView(
               document.querySelector('.app')
