--- a/app/templates/device-list.njk
+++ b/app/templates/device-list.njk
@@ -22,7 +22,10 @@
   <div class="device-summary-view block">
     <div class="chart-container"></div>
   </div>
-  <div class="purified-view block"></div>
+  <div class="purified-view block">
+    <header class="block-header">制水量统计数据</header>
+    <div class="chart-container"></div>
+  </div>
   <div class="device-list-view block">
     <table class="datatable device-list-table">
     </table>
