--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -100,6 +100,9 @@ body {
 }
 
 .block {
+  width: 100%;
+  padding: 10px 20px;
+  margin-bottom: 10px;
   background-color: $light;
   //box-shadow: inset 1px 1px $dark, inset -1px -1px $dark;
 }
@@ -108,6 +111,7 @@ body {
   color: $dark;
   cursor: default;
   user-select: none;
+  font-weight: 500;
 }
 
 .dashboard {
@@ -128,4 +132,8 @@ body {
 
 .device-list {
   @import 'device-list';
+}
+
+.device-detail {
+  @import 'device-detail';
 }
