--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -36,6 +36,8 @@ $widget-header-height: $widget-header-margin-top + $base-line-height;
 $primary: #263372;
 $dark: #080309;
 $light: #fff;
+$active: #49b5c9;
+
 $header-background: $primary;
 $header-color: #fff;
 $body-background: #fafafa;
@@ -44,7 +46,7 @@ $body-background: #fafafa;
 $table-header-background: #edf0f7;
 $table-header-color: #2a2a2a;
 $table-body-color: #333;
-$table-active-color: #49b5c9;
+$table-active-color: $active;
 $table-info-color: #999;
 $table-pager-color: #666;
 $table-pager-border-color: #c3c3c3;
