--- a/app/styles/_device-detail.scss
+++ b/app/styles/_device-detail.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 .column {
   width: 50%;
   padding-top: 20px;
@@ -11,6 +13,17 @@
   &:last-child {
     max-width: 686px;
   }
+}
+
+.button {
+  display: inline-block;
+  padding: 3px 17px;
+  background: #019bc2;
+  border-radius: 3px;
+  box-shadow: 0 1px lighten(#019bc2, 5%);
+  color: $light;
+  cursor: pointer;
+  user-select: none;
 }
 
 .info-view {
@@ -69,10 +82,31 @@
   height: 806px;
 }
 
+.section-header {
+  font-size: 1em;
+  font-weight: 500;
+}
+
+.info {
+  margin: 10px 0;
+}
+
 .location-view {
+  position: relative;
   height: 328px;
+
+  .map-container {
+    display: block;
+    width: 100%;
+    height: 260px;
+    margin-top: 11px;
+  }
 }
 
 .customer-view {
   height: 806px;
+
+  .info-field {
+    padding-right: 10%;
+  }
 }
