feat(device-detail): markup restructure

--- a/app/styles/_device-detail.scss
+++ b/app/styles/_device-detail.scss
@@ -109,4 +109,12 @@
   .info-field {
     padding-right: 10%;
   }
+
+  .section-header {
+    line-height: 24px;
+  }
+}
+
+.customer-info {
+  margin-bottom: 20px;
 }
