--- a/app/templates/device-detail.njk
+++ b/app/templates/device-detail.njk
@@ -74,8 +74,8 @@
       <div class="map-container"></div>
     </div>
     <div class="block customer-view">
-      <h4 class="block-header">客户信息</h4>
-      <div class="info">
+      <section class="customer-info">
+        <h4 class="section-header">客户信息</h4>
         <div class="info">
           <div class="info-field">
             <div class="info-field-name">姓名</div>
@@ -98,9 +98,9 @@
             <div class="info-field-value">021-52889898</div>
           </div>
         </div>
-        <a class="button">查询用户信息</a>
-        <table class="datatable activation-table"></table>
-      </div>
+        <a class="button query-customer-button">查询用户信息</a>
+      </section>
+      <table class="datatable activation-table"></table>
     </div>
   </div>
 {% endblock %}
